Adds espresso acceptance tests

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">TicTacToe</string>
+    <string name="toast_draw">It\'s a draw!</string>
+    <string name="toast_win">" wins!"</string>
 </resources>
