--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">TicTacToe</string>
     <string name="toast_draw">It\'s a draw!</string>
     <string name="toast_win">" wins!"</string>
+    <string name="_3_x_3">3 x 3</string>
+    <string name="human_v_human">Human v Human</string>
 </resources>
