--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="play">play</string>
     <string name="human_v_human_button">Human v Human</string>
     <string name="_3x3_button">3x3</string>
+    <string name="human_v_computer">Human v Computer</string>
 </resources>
