--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,9 @@
     <string name="random_computer_v_human">Random Computer v Human</string>
     <string name="perfect_computer_v_human">Perfect Computer v Human</string>
     <string name="_4x4">4x4</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_four_by_four_board">FourByFourBoard</string>
+    <string name="title_activity_four_by_four">FourByFourActivity</string>
 </resources>
