--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="random_computer_v_human">Random Computer v Human</string>
     <string name="perfect_computer_v_human">Perfect Computer v Human</string>
     <string name="_4x4">4x4</string>
+    <string name="draw_text">It\'s a draw!</string>
 </resources>
